# ppaa-experiments

./: .gitignore  README.md  ddaa.md  kernels.html  kernels2.html  ppaa_experiments.py  pyproject.toml  ssaa.md  viewer.html
.github/workflows/: build.yml
ddaa_paper/: klein_ddaa.bib  klein_ddaa.tex
ddaa_paper/images/: diffuse_3x3.py
glsl/: axaa.glsl  ddaa1.glsl  fxaa2.glsl  mcaa.glsl  nfaa.glsl  noaa.glsl  smooth_aa.glsl
html/: index.html  interpolate.html  kernels2.html  viewer.html
images_all/: README.md
scripts/: benchmarks.py  create_animated_img.py  create_circles_img.py  create_lines_img.py  create_plot_img.py  create_sponza_img.py  estimate_line_angles.py  kernel_opt.py  kernel_shape.py  quantitative_comparisons.py  renderer_glsl.py  renderer_wgsl.py  run_shaders.py
wgsl/: blur.wgsl  ddaa1.wgsl  ddaa1_default.wgsl  ddaa2.wgsl  ddaa2_default.wgsl  dlaa.wgsl  fxaa2.wgsl  fxaa3.wgsl  fxaa311.wgsl  fxaa3c.wgsl  fxaa3d.wgsl  noaa.wgsl  smooth_aa.wgsl  ssaa.wgsl
